--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 
 h1 {
-   border: 1px solid red;
+   /* border: 1px solid red; */
     font: bold;
     text-align: center; 
-    font-size: x-large;
+    font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;     
 }
 
 .banner {
@@ -13,36 +14,45 @@ h1 {
 body {
     width: 80%;
     margin: 0 auto;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     background-color:#ffe5d9;
 }
 
 .previous {
 display: flex;
-flex-direction: column;
+align-items: baseline;
 }
 
 .ingredients {
     width: 50%;
     margin-top: 1.87rem;
+    margin-right: 1.25rem;
     padding-left: 1.25rem;
+    padding-right: 0.625rem;
     top: 34.37rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;     
     
     border: 0.063rem solid #000000;
     box-sizing: border-box;
+}
 
+.alignProducts {
+    display: flex;
+    align-items: baseline; 
+    
 }
 
 .time {
     width: 50%;
     margin-top: 1.87rem;
+    margin-left: 1.25rem;
     padding-left: 1.25rem;
     top: 34.37rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;     
     
     border: 0.063rem solid #000000;
     box-sizing: border-box;
+    border-radius: 1.25rem;
     
 }
 
@@ -70,12 +80,20 @@ h4 {
 footer {
    
     width: 100%;
-    padding-left: 1.87rem;
-    padding-right: 1.87rem;
+    /* padding-left: 1.87rem;
+    padding-right: 1.87rem; */
     padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+    padding-left: 1.25rem;
+    margin-top: 1.875rem;    
     left: 3.12rem;
     top: 100rem;
     
     border: 0.063rem solid #000000;
     box-sizing: border-box;   
-}
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
+    
+    font-weight: bold;
+    text-align: center; 
+} 
